--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -14,7 +14,18 @@
 a {
     color:black
 }
-
+h3{
+    font-weight: 600;
+    font-size: 20px;
+}
+h4{
+    font-weight: 400;
+    font-size: 20px;
+}
+h2{
+    padding: 0;
+    margin:0;
+}
 html {
     font-size: 65%;
     color: black;
@@ -27,4 +38,7 @@ body {
 }
 p{
     padding:10px
+}
+main{
+    border-radius: 20px;
 }
