--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -13,4 +13,4 @@
 @import "./layout/main";
 @import "./layout/footer";
 @import "./layout/image";
-@import "./layout/lacarte";
+@import "./layout/Animation";
