mise en forme des pages

--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -6,15 +6,9 @@ body {
     line-height: 1.7;
 }
 
-.footer .titre_footer {
-    font-family: "Shrikhand";
-    font-weight: 800;
-    font-size: 25px;
-    font-style: italic;
-}
 h2 {
     font-weight: 600;
-    margin: 0 0 20px 0;
+    margin: 0 0 20px 10px;
     font-size: 2.3rem;
     color:$font_color ;
 }
