--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,11 +1,5 @@
 @charset "UTF-8";
 /*importation des fichiers pour generer le fichier style.css*/
-/*
-$hue: hue($primary-color);
-$sat: 100%;
-$light: 93%;
-$pastel_purple: hsl($hue,$sat,$light);
-*/
 *,
 *::after,
 *::before {
@@ -20,22 +14,39 @@ $pastel_purple: hsl($hue,$sat,$light);
 }
 
 a {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  flex-wrap: wrap;
   color: black;
+  width: 100%;
+  height: 100%;
 }
 
 h3 {
   font-weight: 600;
   font-size: 20px;
+  margin-left: 15px;
 }
 
 h4 {
   font-weight: 400;
   font-size: 20px;
+  margin-left: 15px;
 }
 
 h2 {
   padding: 0;
   margin: 0;
+}
+
+.H2_souligner {
+  position: relative;
+  top: -25px;
+  left: 10px;
+  width: 75px;
+  height: 4px;
+  background-color: #99E2D0;
 }
 
 html {
@@ -53,8 +64,15 @@ p {
   padding: 10px;
 }
 
-main {
-  border-radius: 20px;
+.titre_page {
+  width: 100%;
+  font-family: "Shrikhand";
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 500;
+  padding: 10px 15px 0px 15px;
 }
 
 body {
@@ -64,62 +82,44 @@ body {
   line-height: 1.7;
 }
 
-.footer .titre_footer {
-  font-family: "Shrikhand";
-  font-weight: 800;
-  font-size: 25px;
-  font-style: italic;
-}
-
 h2 {
   font-weight: 600;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px 10px;
   font-size: 2.3rem;
   color: black;
 }
 
-.btn_explorer {
+.btn_explorer, .btn_commander {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 220px;
-  height: 50px;
+  width: 250px;
+  height: 45px;
   text-align: center;
   font-size: 15px;
   color: white;
-  border-radius: 30px;
+  border-radius: 25px;
   background: linear-gradient(175deg, #FF79DA 10%, #9356DC 95%);
   transition: box-shadow 150ms linear, transform 150ms linear;
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3);
+  margin-bottom: 50px;
 }
-.btn_explorer:hover {
-  transform: translate(0px, 5px);
-  -webkit-transform: translate(0px, 5px);
-  border-bottom: 1px solid;
-  background: linear-gradient(175deg, #FF79DA 10%, #9356DC 95%);
-  /*background: linear-gradient(to bottom right,lighten($secondary-color,5%),lighten($primary-color,5%));
-  box-shadow: 0px 0px 10px 0px #3b2e30;*/
+.btn_explorer:hover, .btn_commander:hover {
+  background: linear-gradient(to bottom right, #ff93e1, #a16be0);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
 }
 
-.btn_commander {
+.Etiquette_new {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 220px;
-  height: 50px;
-  text-align: center;
-  font-size: 15px;
-  color: white;
-  border-radius: 30px;
-  background: linear-gradient(175deg, #FF79DA 10%, #9356DC 95%);
-  transition: box-shadow 150ms linear, transform 150ms linear;
-  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3);
-}
-.btn_commander:hover {
-  transform: translate(0px, 5px);
-  -webkit-transform: translate(0px, 5px);
-  border-bottom: 1px solid;
-  background: linear-gradient(175deg, #FF79DA 10%, #9356DC 95%);
+  height: 30px;
+  width: 100px;
+  background-color: #99E2D0;
+  color: #008766;
+  position: absolute;
+  right: 40px;
+  margin: 10px;
 }
 
 header {
@@ -135,6 +135,18 @@ header {
 header #logo {
   width: auto;
   height: 30px;
+}
+
+#logo {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+}
+#logo > a {
+  position: absolute;
+  left: 20px;
+  top: 15px;
 }
 
 .RechercheResto {
@@ -205,7 +217,8 @@ header #logo {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px;
+  padding-left: 15px;
+  padding-right: 10px;
 }
 
 .nom {
@@ -219,8 +232,21 @@ header #logo {
 
 .Anim_coeur {
   position: relative;
-  bottom: 30%;
+  bottom: 100%;
   left: 85%;
+}
+
+.Anim_coeur_page {
+  position: absolute;
+  right: 10%;
+  bottom: 99%;
+}
+
+.part_commander {
+  display: flex;
+  justify-content: center;
+  height: 100px;
+  padding: 20px;
 }
 
 .Resto:hover {
@@ -246,6 +272,14 @@ header #logo {
   margin-top: -15px;
 }
 
+.img_carte {
+  width: 100%;
+  object-fit: cover;
+  object-position: 0% 60%;
+  height: 285px;
+  z-index: -1;
+}
+
 .fonctionnement {
   display: flex;
   justify-content: center;
@@ -264,11 +298,11 @@ header #logo {
   align-items: center;
   cursor: pointer;
   width: 100%;
-  height: 65px;
-  font-size: 20px;
+  height: 70px;
+  font-size: 18px;
   background-color: #F0F0F0;
-  box-shadow: 5px 5px 5px grey;
-  border-radius: 30px;
+  box-shadow: 5px 5px 5px #c4c0c0;
+  border-radius: 20px;
   margin: 15px 0px 15px 0px;
 }
 .fonction > .fc_circle {
@@ -293,6 +327,10 @@ header #logo {
   width: 50px;
 }
 
+.fonction_clair {
+  background-color: #e9ddf8;
+}
+
 .Menu {
   display: flex;
   flex-direction: column;
@@ -312,14 +350,83 @@ header #logo {
 }
 
 .reference {
-  border-radius: 20px;
   display: flex;
+  flex-grow: 1;
+  border-radius: 10px;
+  position: relative;
   width: 100%;
-  height: 80%;
+  height: 78%;
   overflow: hidden;
-  margin-bottom: 15px;
+  margin: 15px 5px 15px 20px;
   background-color: white;
   box-shadow: 2px 2px 5px grey;
+  animation: appear 0.5s;
+}
+.reference > .reference_desc {
+  width: 78%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.reference > .reference_prix {
+  font-weight: 700;
+  margin: 0 10px 0 0px;
+  padding-right: 0;
+  margin-top: 30px;
+  transition: padding-right 300ms linear;
+}
+
+.check {
+  color: white;
+  font-size: 20px;
+  opacity: 0;
+  transform: rotate(0deg);
+  transition: all 0.7s ease-in-out;
+}
+
+.Anim_reference {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  height: 70px;
+  width: 80px;
+  opacity: 1;
+  background-color: #99E2D0;
+  margin-left: 85%;
+  margin-right: 0;
+  border-radius: 0 10px 10px 0;
+  transition: all 0.7s ease-in-out;
+}
+
+.reference:hover {
+  cursor: pointer;
+}
+
+.reference:hover .check {
+  opacity: 1;
+  transform: rotate(360deg);
+  transition: transform 300ms linear;
+}
+
+.reference:hover .Anim_reference {
+  opacity: 1;
+  animation: slide-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  transition: transform 300ms linear;
+}
+
+#Carte {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  border-radius: 25px 25px 0 0;
+  margin-top: -30px;
+  background-color: #F0F0F0;
+}
+
+.New {
+  display: flex;
+  overflow: hidden;
 }
 
 footer {
@@ -333,6 +440,11 @@ footer .footer {
   max-width: 1200px;
   font-size: 18px;
   padding: 10px 0 20px 20px;
+}
+footer .footer > .titre_footer {
+  font-family: "Shrikhand";
+  font-size: 18px;
+  font-style: italic;
 }
 footer .footer li {
   font-size: 15px;
@@ -369,32 +481,111 @@ footer .footer i {
   font-weight: 500;
   color: grey;
   cursor: pointer;
+  position: absolute;
 }
 
 .coeur_plein {
-  display: flex;
-  position: relative;
+  position: absolute;
   background: linear-gradient(to top right, #FF79DA 0%, #600045 100%);
   pointer-events: none;
   font-size: 30px;
-  top: -20px;
-  visibility: hidden;
+  transform: scale(0);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 @keyframes anim_coeur {
-  0% {
-    visibility: inherit;
-  }
   100% {
-    transform: translate(0px, -20px);
-    visibility: visible;
+    transform: scale(1);
   }
 }
 .coeur:hover + .coeur_plein {
-  animation: anim_coeur 1s both;
+  animation: anim_coeur 500ms 500ms both;
+}
+
+/*
+  //animation check
+  .image {
+    overflow: hidden;
+    transition-duration: 0.8s;
+    transition-property: transform;
+}
+.image:hover {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
+*/
+/*
+  .check{
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    right: 20px;
+    top: 20px;
+    text-align: center;
+    background-color: white;
+    color: $tertiary-color;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+  }*/
+/*voir pour demain
+
+  .btn {
+    &:hover + .box {
+        transform: scale(1) rotate(0deg);
+        span {
+            transform: translateY(0);
+        }
+    }
+}
+.box {
+    overflow: hidden;
+    transform: scale(.1) rotate(-90deg);
+    transition: transform 330ms ease-in-out;
+    span {
+        transform: translateY(250%);
+        transition: transform 280ms ease-out 50ms;
+        display: block;
+    }
+}*/
+/* affichage check */
+/*
+@keyframes AnimCheck {
+    0% {
+      transform: translateY(30px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(-0px);
+      opacity: 1;
+    }
+  }
+
+  */
+@keyframes appear {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+/**
+ * ----------------------------------------
+ * animation slide-left
+ * ----------------------------------------
+ */
+@keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100px);
+    transform: translateX(-100px);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
