--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -12,20 +12,39 @@
 }
  
 a {
-    color:black
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    flex-wrap: wrap;
+    color:black;
+    width: 100%;
+    height: 100%;
 }
 h3{
     font-weight: 600;
     font-size: 20px;
+    margin-left:15px;
 }
 h4{
     font-weight: 400;
     font-size: 20px;
+    margin-left:15px;
+
 }
 h2{
     padding: 0;
     margin:0;
 }
+
+
+.H2_souligner {
+    position: relative;
+    top: -25px;
+    left: 10px;
+    width:75px;
+    height:4px;
+    background-color: $tertiary-color;
+  }
 html {
     font-size: 65%;
     color: black;
@@ -39,6 +58,14 @@ body {
 p{
     padding:10px
 }
-main{
-    border-radius: 20px;
+
+.titre_page{
+    width: 100%;
+    font-family: "Shrikhand";
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 30px;
+    font-weight:500;
+    padding: 10px 15px 0px 15px;
 }
