--- a/Sass/components/_buttons.scss
+++ b/Sass/components/_buttons.scss
@@ -1,47 +1,32 @@
-.btn_explorer {
+.btn_explorer, .btn_commander{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 220px;
+  width: 250px;
   height: $btn-height;
   text-align: center;
   font-size: 15px;
   color: white;
-  border-radius: 30px;
+  border-radius: 25px;
   background: linear-gradient(175deg,$secondary-color 10%,$primary-color 95%);
   transition: box-shadow 150ms linear,transform 150ms linear;
   box-shadow: 0 10px 20px 0 rgb(0 0 0/30%);
-  
-  &:hover {
+  margin-bottom: 50px;
 
-    transform: translate(0px,5px);
-    -webkit-transform: translate(0px,5px);
-    border-bottom: 1px solid;
-    background: linear-gradient(175deg,$secondary-color 10%,$primary-color 95%);
-    /*background: linear-gradient(to bottom right,lighten($secondary-color,5%),lighten($primary-color,5%));
-    box-shadow: 0px 0px 10px 0px #3b2e30;*/
+  &:hover {
+    background: linear-gradient(to bottom right,lighten($secondary-color,5%),lighten($primary-color,5%));
+    box-shadow: 0px 0px 10px 0px darken(rgb(0 0 0/30%),5%);
   }
 }
-
-.btn_commander {
+.Etiquette_new{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 220px;
-  height: $btn-height;
-  text-align: center;
-  font-size: 15px;
-  color: white;
-  border-radius: 30px;
-  background: linear-gradient(175deg,$secondary-color 10%,$primary-color 95%);
-  transition: box-shadow 150ms linear,transform 150ms linear;
-  box-shadow: 0 10px 20px 0 rgb(0 0 0/30%);
-  
-  &:hover {
-
-    transform: translate(0px,5px);
-    -webkit-transform: translate(0px,5px);
-    border-bottom: 1px solid;
-    background: linear-gradient(175deg,$secondary-color 10%,$primary-color 95%);
-  }
+  height: 30px;
+  width: 100px;
+  background-color: $tertiary-color;
+  color: #008766;
+  position: absolute;
+  right: 40px;
+  margin: 10px;
 }
