--- a/Sass/layout/_footer.scss
+++ b/Sass/layout/_footer.scss
@@ -8,6 +8,11 @@ footer {
         max-width: 1200px;
         font-size: 18px;
         padding:10px 0 20px 20px ;
+        & > .titre_footer{
+        font-family: "Shrikhand";
+        font-size: 18px;
+        font-style: italic;}
+
         li{
             font-size: 15px;
             list-style: none;
