--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -1,3 +1,14 @@
+#logo{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  & > a{
+    position: absolute;
+    left: 20px;
+    top: 15px;
+  }
+}
 .RechercheResto {   
     display: flex;
     flex-direction: column;
@@ -50,14 +61,14 @@
         padding-right: $carte-padding;
         justify-content: space-between;
         align-items: center;   
-    }
-    
+    }   
   }
   .Resto_Description {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px;
+    padding-left: 15px;
+    padding-right: 10px;
   }
 
 .nom {
@@ -69,8 +80,20 @@
   }
   .Anim_coeur{
     position: relative;
-    bottom:30%;
+    bottom:100%;
     left: 85%;
+  }
+  
+  .Anim_coeur_page{
+    position: absolute;
+    right:10%;
+    bottom: 99%;
+  }
+  .part_commander{
+    display: flex;
+    justify-content: center;
+    height: 100px;
+    padding: 20px;
   }
   
   .Resto:hover{
@@ -89,7 +112,13 @@
     transition-duration: 0.1s;
     cursor: pointer;
     margin-top: -15px;
-    
+  }
+  .img_carte{
+    width: 100%;
+    object-fit: cover;
+    object-position: 0% 60%;
+    height: 285px;
+    z-index: -1;
   }
 
 .fonctionnement {
@@ -111,13 +140,13 @@
   align-items:center;
   cursor: pointer;
   width: 100%;
-  height: 65px;
-  font-size: 20px;
+  height: 70px;
+  font-size: 18px;
   background-color: $background_color;
-  box-shadow: 5px 5px 5px grey;
-  border-radius: 30px;
+  box-shadow: 5px 5px 5px #c4c0c0;
+  border-radius: 20px;
   margin: 15px 0px 15px 0px;
-
+  
   & > .fc_circle {
       display: flex;
       background-color: $primary_color;
@@ -139,6 +168,12 @@
     text-align: center;
     width:50px;}
 }
+ .fonction_clair
+  {
+    //background-color : lime;
+    background-color: lighten($primary_color,32%);
+}
+
 .Menu {
   display: flex;
   flex-direction: column;
@@ -157,12 +192,82 @@
 }
 
 .reference{
-  border-radius: 20px;
+  
   display: flex;
+  flex-grow: 1;
+  border-radius: 10px;
+  position: relative;
   width: 100%;
-  height: 80%;
+  height: 78%;
   overflow: hidden;
-  margin-bottom: 15px;
+  margin: 15px 5px 15px 20px;
   background-color: white;
   box-shadow: 2px 2px 5px grey;
+  animation: appear 0.5s;
+  & > .reference_desc {
+    width: 78%;
+    overflow  : hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  & > .reference_prix{
+    font-weight: 700;
+    margin: 0 10px 0 0px;
+    padding-right: 0;
+    margin-top: 30px;
+    transition: padding-right 300ms linear;
+  }
+}
+
+.check{
+  color: white;
+  font-size: 20px;
+  opacity: 0;
+  transform: rotate(0deg);
+  transition: all 0.7s ease-in-out;
+  //animation: rotate-center 0.6s linear both;
+}
+.Anim_reference{
+display: flex;
+position:absolute;
+align-items: center;
+justify-content: center;
+height: 70px;
+width: 80px;
+opacity: 1;
+background-color: $tertiary-color;
+//25 px -70px
+margin-left: 85%;
+margin-right: 0;
+border-radius: 0 10px 10px 0;
+transition: all 0.7s ease-in-out;
+}
+.reference:hover {
+cursor: pointer;
+}
+
+.reference:hover .check{
+  opacity: 1;
+  transform: rotate(360deg) ;
+  transition: transform 300ms linear;
+}
+
+.reference:hover .Anim_reference{
+  opacity: 1;
+  animation: slide-left 2s cubic-bezier(0.250, 0.460, 0.450, 0.940)  both;
+  transition: transform 300ms linear;
+}
+
+
+#Carte{
+  display: flex;
+  flex-direction: column;
+  position:relative;
+  border-radius: 25px 25px 0 0;
+  margin-top: -30px;
+  background-color:$background-color;
+}
+.New{
+  display: flex;
+  overflow: hidden;
 }
