--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -8,7 +8,7 @@
 @import "./base/typography";
 
 @import "./components/_buttons";
-
+//@import "./layout/Loader";
 @import "./layout/header";
 @import "./layout/main";
 @import "./layout/footer";
