--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -9,6 +9,7 @@
 * {
     text-decoration:none;
     font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
 }
  
 a {
@@ -18,12 +19,37 @@ a {
     flex-wrap: wrap;
     color:black;
     width: 100%;
-    height: 100%;
+    height:100% ;
 }
+
+h1 {
+    font-weight: 600;
+    margin: 0 0 20px 10px;
+    font-size: 2.3rem;
+    color:$font_color ;
+}
+
+h2 {
+    font-weight: 400;
+    margin: 0 0 20px 10px;
+    font-size: 2.3rem;
+    color:$font_color ;
+   // padding: 0;
+   // margin:0;
+}
+.H2_souligner {
+    position: relative;
+    top: -20px;
+    margin-left: 10px;
+    width:75px;
+    height:4px;
+    background-color: $tertiary-color;
+  }
 h3{
     font-weight: 600;
     font-size: 20px;
     margin-left:15px;
+
 }
 h4{
     font-weight: 400;
@@ -31,20 +57,7 @@ h4{
     margin-left:15px;
 
 }
-h2{
-    padding: 0;
-    margin:0;
-}
 
-
-.H2_souligner {
-    position: relative;
-    top: -25px;
-    left: 10px;
-    width:75px;
-    height:4px;
-    background-color: $tertiary-color;
-  }
 html {
     font-size: 65%;
     color: black;
@@ -54,6 +67,10 @@ body {
     box-sizing: border-box;
     background-color: white;
     margin: 0 auto;
+    background-color: $background-color;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1.7;
 }
 p{
     padding:10px
