--- a/Sass/layout/_Loader.scss
+++ b/Sass/layout/_Loader.scss
@@ -1,32 +1,60 @@
+
+#loader{
+	position:fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 10;
+	background-color: white;
+	animation: disapear 3s linear;
+	animation-fill-mode: forwards;
+}
+
 div.container {
+	
     display: flex;
 	justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
-    justify-content: center;
     animation: bounce 1.5s 0.5s linear 3;
+	
 }
 
-div > div {
+
+#loader div > div {
 	margin: 2vw;
-    width: 3vw;
-	height: 3vw;
-    background-color: white;
+    width: 5vw;
+	height: 5vw;
     opacity: .99;
+	border-radius: 50%;
+	text-align: center;
+	vertical-align: center;
+	justify-content: center;
 }
 .primaire {
 	background-color: $primary-color;
+	text-align: left;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .secondaire {
 	background-color: $secondary-color;
 	animation-delay: 0.1s;
+	text-align: left;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-weight: bold;
+
 }
 
 .tertiaire {
 	background-color: $tertiary-color;
 	animation-delay: 0.2s;
+	text-align: left;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-weight: bolder;
+
 }
 
 @keyframes bounce {
@@ -41,5 +69,15 @@ div > div {
 	75% {
 		filter: blur(3px);
 		transform: scale(1.4);
+	}
+}
+
+@keyframes disapear {
+	90%{
+		opacity: 1;
+	}
+	100%{
+		opacity: 0;
+		pointer-events: none;
 	}
 }
