--- a/Sass/layout/_footer.scss
+++ b/Sass/layout/_footer.scss
@@ -10,8 +10,8 @@ footer {
         padding:10px 0 20px 20px ;
         & > .titre_footer{
         font-family: "Shrikhand";
-        font-size: 18px;
-        font-style: italic;}
+        //font-size: 20px;
+        padding-bottom: 10px;}
 
         li{
             font-size: 15px;
