--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -5,10 +5,9 @@
 
 
 @import "./base/base";
-@import "./base/typography";
 
 @import "./components/_buttons";
-//@import "./layout/Loader";
+@import "./layout/Loader";
 @import "./layout/header";
 @import "./layout/main";
 @import "./layout/footer";
