--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -391,7 +391,6 @@ header #logo {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   margin: 25px 0 50px;
 }
 
@@ -509,7 +508,7 @@ Ordinateur 992 px à 1199 px
     font-size: 20px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1200px) {
   .all_resto {
     width: 100%;
     height: 100%;
