--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -171,7 +171,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  //align-items: center;
   margin: 25px 0 50px;
 }
 .Entree, .Plat, .Dessert{
@@ -297,7 +297,7 @@ Ordinateur 992 px à 1199 px
   }
   }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1200px) {
   .all_resto{
     width: 100%;
     height: 100%;
