--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -271,7 +271,6 @@ header #logo {
   box-sizing: border-box;
   margin: 0 5px 20px 5px;
   box-shadow: 0 5px 16px #0000002e;
-  /*transition largeur,hauteur, durée d'une seconde*/
 }
 .Resto__note {
   display: flex;
@@ -508,7 +507,7 @@ Ordinateur 992 px à 1199 px
     font-size: 20px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) {
   .all_resto {
     width: 100%;
     height: 100%;
@@ -550,12 +549,13 @@ Ordinateur 992 px à 1199 px
     font-size: 30px;
   }
 }
+/*
 @media screen and (min-width: 991px) {
-  .Etiquette_new {
+  .Etiquette_new  {
     left: 39%;
     right: 0%;
   }
-}
+}*/
 footer {
   width: 100%;
   background-color: #353535;
