--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -49,12 +49,7 @@
     box-sizing: border-box;
     margin: 0 5px 20px 5px;
     box-shadow: 0 5px 16px #0000002e;
-    /*transition largeur,hauteur, durée d'une seconde*/
-  //  -webkit-transition: all 1s ease; /* Safari et Chrome*/
-  //  -moz-transition: all 1s ease; /* Firefox */
-  //  -ms-transition: all 1s ease; /* Internet Explorer 9*/ 
- //   -o-transition: all 1s ease; /* Opera */
-  //  transition: all 1s ease;
+   
     &__note {
         display:flex;
         padding-left: $carte-padding;
@@ -297,7 +292,7 @@ Ordinateur 992 px à 1199 px
   }
   }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) {
   .all_resto{
     width: 100%;
     height: 100%;
@@ -335,10 +330,11 @@ Ordinateur 992 px à 1199 px
     }    
   }
   }
+  /*
   @media screen and (min-width: 991px) {
     .Etiquette_new  {
       left: 39%;
       right: 0%;
     }
-  }
+  }*/
 
