--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -11,7 +11,6 @@
 * {
   text-decoration: none;
   font-family: "Roboto", sans-serif;
-  scroll-behavior: smooth;
 }
 
 a {
@@ -20,8 +19,6 @@ a {
   overflow: hidden;
   flex-wrap: wrap;
   color: black;
-  width: 100%;
-  height: 100%;
 }
 
 h1 {
@@ -79,6 +76,7 @@ p {
 }
 
 .titre_page {
+  position: relative;
   width: 100%;
   font-family: "Shrikhand";
   display: flex;
@@ -102,7 +100,7 @@ p {
   background: linear-gradient(175deg, #FF79DA 10%, #9356DC 95%);
   transition: box-shadow 150ms linear, transform 150ms linear;
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3);
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 .btn_explorer:hover, .btn_commander:hover {
   background: linear-gradient(to bottom right, #ff93e1, #a16be0);
@@ -118,7 +116,7 @@ p {
   background-color: #99E2D0;
   color: #008766;
   position: absolute;
-  right: 40px;
+  right: 10px;
   margin: 10px;
 }
 
@@ -281,6 +279,7 @@ header #logo {
 }
 
 .Resto_Description {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -298,15 +297,15 @@ header #logo {
 }
 
 .Anim_coeur {
-  position: relative;
-  bottom: 100%;
-  left: 85%;
+  position: absolute;
+  top: 10px;
+  right: 50px;
 }
 
 .Anim_coeur_page {
   position: absolute;
-  right: 10%;
-  bottom: 99%;
+  top: 10px;
+  right: 10px;
 }
 
 .part_commander {
@@ -492,6 +491,7 @@ header #logo {
 .New {
   display: flex;
   overflow: hidden;
+  position: relative;
 }
 
 /*  Gestion Responsive */
@@ -517,11 +517,11 @@ Ordinateur 992 px à 1199 px
     grid-template-rows: 50% 50%;
   }
 
-  .Etiquette_new {
-    left: 34%;
-    right: 0%;
-  }
-
+  /*
+  .Etiquette_new  {
+        left: 34%;
+        right: 0%;
+      }*/
   .btn_fonctionnement {
     padding: 20px;
   }
