--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -9,7 +9,6 @@
 * {
     text-decoration:none;
     font-family: 'Roboto', sans-serif;
-    scroll-behavior: smooth;
 }
  
 a {
@@ -18,8 +17,8 @@ a {
     overflow: hidden;
     flex-wrap: wrap;
     color:black;
-    width: 100%;
-    height:100% ;
+    //width: 100%;
+   // height:100% ;
 }
 
 h1 {
@@ -77,6 +76,7 @@ p{
 }
 
 .titre_page{
+    position: relative;
     width: 100%;
     font-family: "Shrikhand";
     display: flex;
