--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -59,6 +59,7 @@
     }   
   }
   .Resto_Description {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -74,15 +75,15 @@
       font-size: 15px;
   }
   .Anim_coeur{
-    position: relative;
-    bottom:100%;
-    left: 85%;
+    position: absolute;
+    top: 10px;
+    right: 50px;
   }
   
   .Anim_coeur_page{
     position: absolute;
-    right:10%;
-    bottom: 99%;
+    top: 10px;
+    right:10px;
   }
   .part_commander{
     display: flex;
@@ -272,6 +273,7 @@ cursor: pointer;
 .New{
   display: flex;
   overflow: hidden;
+  position: relative;
 }
 
 /*  Gestion Responsive */
@@ -301,10 +303,11 @@ Ordinateur 992 px à 1199 px
     grid-template-columns: 50% 50%;
     grid-template-rows:50% 50% ;
   }
+  /*
   .Etiquette_new  {
         left: 34%;
         right: 0%;
-      }
+      }*/
   
   .btn_fonctionnement{
     padding: 20px;
