--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -21,6 +21,9 @@
     border-top: 3px solid $search-color-border;
     padding-bottom: 10px;
 }
+.Resto a{
+  width: 100%;
+}
 .btn_Recherche{
     display: flex;
     justify-content: center;
