--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -237,6 +237,10 @@ header #logo {
   padding-bottom: 10px;
 }
 
+.Resto a {
+  width: 100%;
+}
+
 .btn_Recherche {
   display: flex;
   justify-content: center;
