--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -86,14 +86,14 @@
   .Anim_coeur_page{
     position: absolute;
     top: 10px;
-    right:10px;
+    right:20px;
   }
   .part_commander{
     display: flex;
     justify-content: center;
     height: 100px;
     width: 100%;
-    padding: 40px;
+
   }
   .Resto img {
     background-color: white;
@@ -171,7 +171,7 @@
   flex-direction: column;
   justify-content: center;
   //align-items: center;
-  margin: 25px 0 50px;
+  margin: 25px 0 10px;
 }
 .Entree, .Plat, .Dessert{
   display: flex;
@@ -306,19 +306,14 @@ Ordinateur 992 px à 1199 px
     grid-template-columns: 50% 50%;
     grid-template-rows:50% 50% ;
   }
-  /*
-  .Etiquette_new  {
-        left: 34%;
-        right: 0%;
-      }*/
   
-  .btn_fonctionnement{
-    padding: 20px;
-  }
   .all_btn_fonction{
-    display:flex;
-    flex-direction: row;
-    width: 100%;
+    margin: 0 auto;
+  }
+ 
+  .fonctionnement .btn_fonctionnement{
+    //padding: 20px;
+    width: 300px;
   }
   .Menu {
     flex-direction: row;
@@ -336,11 +331,18 @@ Ordinateur 992 px à 1199 px
     }    
   }
   }
-  /*
-  @media screen and (min-width: 991px) {
-    .Etiquette_new  {
-      left: 39%;
-      right: 0%;
-    }
-  }*/
-
+  @media screen and (min-width: 1024px){
+    
+  .all_btn_fonction{
+    display:flex;
+    flex-direction: row;
+    width: 100%;
+    margin: 0;
+  }
+  
+  .fonctionnement .btn_fonctionnement{
+    padding: 20px;
+    width: 100%;
+  }
+ 
+  }
