--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -144,13 +144,14 @@ div.container {
 #loader div > div {
   display: flex;
   margin: 2vw;
-  width: 5vw;
-  height: 5vw;
+  width: 7vw;
+  height: 7vw;
   opacity: 0.99;
   border-radius: 50%;
   justify-content: center;
   align-items: center;
   font-family: "Shrikhand";
+  font-size: 15px;
   color: white;
 }
 
@@ -268,20 +269,12 @@ header #logo {
   display: flex;
   max-width: 100%;
   height: 230px;
-  /* voir comment gerer en automatique avec fonction */
   background: white;
   border-radius: 20px;
   overflow: hidden;
   box-sizing: border-box;
   margin: 0 5px 20px 5px;
   box-shadow: 0 5px 16px #0000002e;
-}
-.Resto__note {
-  display: flex;
-  padding-left: 15px 0px 25px 0px;
-  padding-right: 15px 0px 25px 0px;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .Resto_Description {
