--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -45,21 +45,13 @@
   .Resto {
     display:flex;
     max-width: 100%;
-    height: 230px;/* voir comment gerer en automatique avec fonction */
+    height: 230px;
     background: white;
     border-radius: 20px;
     overflow: hidden;
     box-sizing: border-box;
     margin: 0 5px 20px 5px;
-    box-shadow: 0 5px 16px #0000002e;
-   
-    &__note {
-        display:flex;
-        padding-left: $carte-padding;
-        padding-right: $carte-padding;
-        justify-content: space-between;
-        align-items: center;   
-    }   
+    box-shadow: 0 5px 16px #0000002e;  
   }
   .Resto_Description {
     position: relative;
@@ -162,7 +154,6 @@
 }
  .fonction_clair
   {
-    //background-color : lime;
     background-color: lighten($primary_color,32%);
 }
 
@@ -170,7 +161,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  //align-items: center;
   margin: 25px 0 10px;
 }
 .Entree, .Plat, .Dessert{
@@ -235,7 +225,6 @@ height: 70px;
 width: 70px;
 opacity: 1;
 background-color: $tertiary-color;
-//25 px -70px
 right: -70px;
 border-radius: 0 10px 10px 0;
 transition: all 300ms ease-in-out;
