--- a/Sass/base/_base.scss
+++ b/Sass/base/_base.scss
@@ -29,27 +29,30 @@ h1 {
 h2 {
     font-weight: 400;
     margin: 0 0 20px 10px;
-    font-size: 2.3rem;
+    font-size: 2rem;
     color:$font_color ;
+    color: lighten(black,45%);
 }
 .H2_souligner {
     position: relative;
     top: -20px;
     margin-left: 10px;
-    width:75px;
+    width:55px;
     height:4px;
     background-color: $tertiary-color;
   }
 h3{
     font-weight: 600;
-    font-size: 20px;
+    font-size: 19px;
     margin-left:15px;
+    //color: lighten(black,10%);
 
 }
 h4{
     font-weight: 400;
-    font-size: 20px;
+    font-size: 15px;
     margin-left:15px;
+    color: lighten(black,20%);
 
 }
 
@@ -78,7 +81,17 @@ p{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 30px;
+    font-size: 25px;
     font-weight:500;
     padding: 10px 15px 0px 15px;
+}
+.titre_logo{
+    height: 35px;
+    line-height: 35px;
+    margin: 0 auto;
+    font-family: "Shrikhand";
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
