--- a/Sass/layout/_main.scss
+++ b/Sass/layout/_main.scss
@@ -9,6 +9,7 @@
     top: 15px;
   }
 }
+
 .RechercheResto {   
     display: flex;
     flex-direction: column;
@@ -78,7 +79,7 @@
   .Anim_coeur_page{
     position: absolute;
     top: 10px;
-    right:20px;
+    right:45px;
   }
   .part_commander{
     display: flex;
@@ -180,10 +181,10 @@
   justify-content: space-between;
   border-radius: 10px;
   position: relative;
-  width: 90%;
+  width: 97%;
   height: 78%;
   overflow: hidden;
-  margin: 5px 5px 15px 20px;
+  margin: 5px 5px 15px 5px;
   background-color: white;
   box-shadow: 2px 2px 5px grey;
   animation: appear_ref 1s ease 0ms 1 normal both;
@@ -201,6 +202,7 @@
   }
   & > .reference_prix{
     font-weight: 700;
+    font-size: 18px;
     margin: 0 10px 0 0px;
    // padding-right: 80px;
     margin-top: 30px;
@@ -221,11 +223,11 @@ display: flex;
 position:absolute;
 align-items: center;
 justify-content: center;
-height: 70px;
-width: 70px;
+height: 60px;
+width: 60px;
 opacity: 1;
 background-color: $tertiary-color;
-right: -70px;
+right: -60px;
 border-radius: 0 10px 10px 0;
 transition: all 300ms ease-in-out;
 }
@@ -260,7 +262,7 @@ cursor: pointer;
   border-radius: 25px 25px 0 0;
   margin-top: -30px;
   background-color:$background-color;
-  padding: 20px;
+  padding: 5px;
 }
 .New{
   display: flex;
